load("//third_party/java:rules.bzl", "java_library", "java_testng")

CLIENT_TEST_JVM_FLAGS = [
    "-Dreplicant.check_diagnostic_messages=false",
    "-Dreplicant.diagnostic_messages_file=$(rootpath //client/src/test/java/replicant:diagnostic_messages.json)",
]

CLIENT_TEST_DATA = ["//client/src/test/java/replicant:diagnostic_messages.json"]

java_library(
    name = "spy_tools_tests_lib",
    srcs = [
        "ReplicantSpyUtilTest.java",
        "SpyEventProcessorTest.java",
        "package-info.java",
    ],
    visibility = [
        "//client/src/test/java/replicant:__pkg__",
    ],
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "ReplicantSpyUtilTest",
    srcs = ["ReplicantSpyUtilTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.tools.ReplicantSpyUtilTest",
    deps = ["//client:client_test_support"],
)

java_testng(
    name = "SpyEventProcessorTest",
    srcs = ["SpyEventProcessorTest.java"],
    data = CLIENT_TEST_DATA,
    jvm_flags = CLIENT_TEST_JVM_FLAGS,
    test_class = "replicant.spy.tools.SpyEventProcessorTest",
    deps = ["//client:client_test_support"],
)
