load("//third_party/java:rules.bzl", "java_server_library")

java_server_library(
    name = "ee_lib",
    srcs = [
        "AbstractSessionContextImpl.java",
        "PushReplicationState.java",
        "ReplicantEndpoint.java",
        "ReplicantEntityChangeListener.java",
        "ReplicantResources.java",
        "ReplicantSessionAdded.java",
        "ReplicantSessionRemoved.java",
        "ReplicantSessionUpdated.java",
        "Replicate.java",
        "ReplicationInterceptor.java",
    ],
    visibility = [
        "//server:__pkg__",
        "//server/src/main/java/replicant/server:__subpackages__",
        "//server/src/test/java/replicant/server:__subpackages__",
    ],
    deps = [
        "//server/src/main/java/replicant/server:server_core_lib",
        "//server/src/main/java/replicant/server/json:json_lib",
        "//server/src/main/java/replicant/server/runtime:runtime_lib",
        "//server/src/main/java/replicant/server/transport:transport_lib",
        "//shared:shared_lib",
        "//third_party/java:javaee_api",
        "//third_party/java:javax_annotation",
        "//third_party/java:javax_json",
        "//third_party/java:org_jetbrains_annotations",
    ],
)
