load("//third_party/java:rules.bzl", "java_server_library")

java_server_library(
    name = "ee_lib",
    srcs = [
        "AbstractSessionContextImpl.java",
        "PushReplicationState.java",
        "ReplicantEndpoint.java",
        "ReplicantEntityChangeListener.java",
        "ReplicantResources.java",
        "ReplicantSessionAdded.java",
        "ReplicantSessionRemoved.java",
        "ReplicantSessionUpdated.java",
        "Replicate.java",
        "ReplicationInterceptor.java",
    ],
    visibility = [
        "//server:__pkg__",
        "//server/src/main/java/replicant/server:__subpackages__",
        "//server/src/test/java/replicant/server:__subpackages__",
    ],
    deps = [
        "//server/src/main/java/replicant/server:server_core_lib",
        "//server/src/main/java/replicant/server/json:json_lib",
        "//server/src/main/java/replicant/server/runtime:runtime_lib",
        "//server/src/main/java/replicant/server/transport:transport_lib",
        "//shared:shared_lib",
        "//third_party/java:jakarta_annotation_api",
        "//third_party/java:jakarta_enterprise_cdi_api",
        "//third_party/java:jakarta_inject",
        "//third_party/java:jakarta_interceptor_api",
        "//third_party/java:jakarta_transaction_api",
        "//third_party/java:jakarta_websocket_api",
        "//third_party/java:javax_annotation",
        "//third_party/java:javax_enterprise_concurrent_api",
        "//third_party/java:javax_json",
        "//third_party/java:javax_persistence_api",
        "//third_party/java:org_jetbrains_annotations",
    ],
)
