load("//third_party/java:rules.bzl", "java_server_library")

java_server_library(
    name = "runtime_lib",
    srcs = [
        "EntityMessageCacheUtil.java",
        "ReplicantContextHolder.java",
        "ReplicantSystem.java",
        "TransactionSynchronizationRegistryUtil.java",
    ],
    visibility = [
        "//server:__pkg__",
        "//server/src/main/java/replicant/server:__subpackages__",
        "//server/src/test/java/replicant/server:__subpackages__",
    ],
    deps = [
        "//server/src/main/java/replicant/server:server_core_lib",
        "//third_party/java:jakarta_inject",
        "//third_party/java:jakarta_transaction_api",
        "//third_party/java:javax_annotation",
    ],
)
