load("//third_party/java:rules.bzl", "java_server_library", "java_testng")

java_server_library(
    name = "ee_test_support_lib",
    srcs = [
        "RegistryUtil.java",
        "TestInvocationContext.java",
    ],
    visibility = ["//server:__pkg__"],
    deps = [
        "//server:server_lib",
        "//third_party/java:jakarta_interceptor_api",
        "//third_party/java:jakarta_transaction_api",
        "//third_party/java:javax_annotation",
        "//third_party/java:jndikit",
        "//third_party/java:testng",
    ],
)

java_testng(
    name = "AbstractSessionContextImplTest",
    srcs = ["AbstractSessionContextImplTest.java"],
    test_class = "replicant.server.ee.AbstractSessionContextImplTest",
    deps = ["//server:server_test_support"],
)

java_testng(
    name = "EntityMessageCacheUtilTest",
    srcs = ["EntityMessageCacheUtilTest.java"],
    test_class = "replicant.server.ee.EntityMessageCacheUtilTest",
    deps = ["//server:server_test_support"],
)

java_testng(
    name = "ReplicantContextHolderTest",
    srcs = ["ReplicantContextHolderTest.java"],
    test_class = "replicant.server.ee.ReplicantContextHolderTest",
    deps = ["//server:server_test_support"],
)

java_testng(
    name = "ReplicantEndpointTest",
    srcs = ["ReplicantEndpointTest.java"],
    test_class = "replicant.server.ee.ReplicantEndpointTest",
    deps = ["//server:server_test_support"],
)

java_testng(
    name = "ReplicantEntityChangeListenerTest",
    srcs = ["ReplicantEntityChangeListenerTest.java"],
    test_class = "replicant.server.ee.ReplicantEntityChangeListenerTest",
    deps = ["//server:server_test_support"],
)
