load("//third_party/java:rules.bzl", "java_testng")

java_testng(
    name = "ChannelCacheEntryTest",
    srcs = ["ChannelCacheEntryTest.java"],
    test_class = "replicant.server.transport.ChannelCacheEntryTest",
    deps = ["//server:server_test_support"],
)

java_testng(
    name = "ChannelMetaDataTest",
    srcs = ["ChannelMetaDataTest.java"],
    test_class = "replicant.server.transport.ChannelMetaDataTest",
    deps = ["//server:server_test_support"],
)

java_testng(
    name = "InvariantUtilTest",
    srcs = ["InvariantUtilTest.java"],
    test_class = "replicant.server.transport.InvariantUtilTest",
    deps = ["//server:server_test_support"],
)

java_testng(
    name = "PacketTest",
    srcs = ["PacketTest.java"],
    test_class = "replicant.server.transport.PacketTest",
    deps = ["//server:server_test_support"],
)

java_testng(
    name = "ReplicantMessageBrokerImplTest",
    srcs = ["ReplicantMessageBrokerImplTest.java"],
    test_class = "replicant.server.transport.ReplicantMessageBrokerImplTest",
    deps = ["//server:server_test_support"],
)

java_testng(
    name = "ReplicantSessionManagerImplTest",
    srcs = ["ReplicantSessionManagerImplTest.java"],
    test_class = "replicant.server.transport.ReplicantSessionManagerImplTest",
    deps = ["//server:server_test_support"],
)

java_testng(
    name = "ReplicantSessionTest",
    srcs = ["ReplicantSessionTest.java"],
    test_class = "replicant.server.transport.ReplicantSessionTest",
    deps = ["//server:server_test_support"],
)

java_testng(
    name = "SchemaMetaDataTest",
    srcs = ["SchemaMetaDataTest.java"],
    test_class = "replicant.server.transport.SchemaMetaDataTest",
    deps = ["//server:server_test_support"],
)

java_testng(
    name = "SubscriptionEntryTest",
    srcs = ["SubscriptionEntryTest.java"],
    test_class = "replicant.server.transport.SubscriptionEntryTest",
    deps = ["//server:server_test_support"],
)
